feat: GUI test added, but commented out